[package]
name = "hamming-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
egui = "0.19.0"
egui-miniquad = "0.12.0"
hamming = { git = "https://github.com/j-browne/hamming.git" }
miniquad = "0.3.13"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
